--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <title>Página do Pokémon Squirtle</title>
+    <title>Página do Pokémon Squirtle 1</title>
     <style>
       /* Reset de estilos para garantir consistência em diferentes navegadores */
       body,
