--- a/index.html
+++ b/index.html
@@ -4,195 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <title>Página do Pokémon Squirtle</title>
-    <style>
-        /* Reset de estilos para garantir consistência em diferentes navegadores */
-        body,
-        h1,
-        h2,
-        p,
-        ul,
-        ol,
-        li,
-        figure,
-        table,
-        th,
-        td {
-            margin: 0;
-            padding: 0;
-        }
+    <link rel="stylesheet" type="text/css" href="stylesheet.css" />
 
-        /* Estilos gerais */
-
-        body {
-            font-family: 'Arial', sans-serif;
-            color: #333;
-            background-color: #f4f4f4;
-        }
-
-        main {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        main>section {
-            padding: 20px;
-        }
-
-        main section,
-        main article {
-            color: black;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
-            display: flex;
-            flex-direction: column;
-
-            align-items: center;
-
-            width: 80vw;
-
-        }
-
-        section h1,
-        section h2,
-        section h3 {
-            margin-bottom: 8px;
-        }
-
-        article h1,
-        article h2,
-        article h3 {
-            margin-bottom: 10px;
-        }
-
-        p {
-            margin-bottom: 16px;
-        }
-
-        ul li {
-            list-style-position: inside;
-        }
-
-        /* Header */
-
-        header {
-            background-color: #007bff;
-            color: #fff;
-            padding: 20px;
-            display: flex;
-            justify-content: center;
-        }
-
-        header h1 {
-            font-size: 24px;
-        }
-
-        /* Lista de navegação */
-
-        nav {
-            display: flex;
-            align-self: flex-end;
-            display: contents;
-            width: 100%;
-            flex-wrap: wrap;
-        }
-
-        nav ul {
-            list-style: none;
-            display: flex;
-            gap: 20px;
-            justify-content: center;
-            background-color: #343a40;
-            padding: 10px;
-            margin-bottom: 20px;
-            flex-wrap: wrap;
-
-
-        }
-
-        nav a {
-            text-decoration: none;
-            color: #fff;
-            font-weight: bold;
-        }
-
-        nav a:hover {
-            color: #ffc107;
-        }
-
-        /* Seções */
-
-        #curiosidades li::marker {
-            content: '🔍';
-        }
-
-        #evolucao ul {
-            display: flex;
-            justify-content: space-around;
-            list-style: none;
-            flex-wrap: wrap;
-
-        }
-
-
-
-        #evolucao figcaption {
-            font-weight: 600;
-            font-size: 20px;
-            text-align: center;
-            margin-top: 16px;
-        }
-
-        article {
-            background-color: #ffc107;
-            color: #fff;
-        }
-
-        /* Links */
-
-        a[target='_blank'] {
-            color: #4592c4;
-            font-weight: bold;
-        }
-
-        a[target='_blank']:hover {
-            opacity: 0.8;
-        }
-
-        /* Footer */
-
-        footer {
-            background-color: #343a40;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-            bottom: 0;
-        }
-
-        footer a {
-            text-decoration: none;
-            transition: color 0.3s ease-in-out;
-        }
-
-        footer a[href*='#'] {
-            color: white;
-        }
-
-        footer a[href*='mailto'] {
-            color: orangered;
-        }
-
-        footer a[href*='tel'] {
-            color: limegreen;
-        }
-
-        footer a[href]:hover {
-            opacity: 0.8;
-        }
-    </style>
 </head>
 
 <body>
@@ -214,8 +27,17 @@
     <main>
         <section id="info-squirtle" aria-labelledby="info-squirtle-label">
             <h2 id="info-squirtle-label">Informações sobre Squirtle</h2>
-            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/7.png"
-                alt="Squirtle - Pokémon do tipo Água" height=96px />
+
+            <ul id="img-info-adicionada-div">
+
+                <li><img class="img-info-inicio"
+                        src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/7.png"
+                        alt="Squirtle - Pokémon do tipo Água" /></li>
+                <li> <img class="img-info-inicio"
+                        src="https://i.pinimg.com/736x/fe/5d/10/fe5d1079c8f3de6755473806d3a45d57.jpg"
+                        alt="Squirtle - Pokémon do tipo Água" /></li>
+            </ul>
+
             <p>
                 Squirtle é um Pokémon do tipo Água. É o Pokémon inicial da região de
                 Kanto e evolui para Wartortle.
@@ -274,8 +96,7 @@
             <h2 id="recursos-label">Recursos Adicionais</h2>
             <ul>
                 <li>
-                    <a href="https://www.pokemon.com/br/pokedex/squirtle" target="_blank ">Pokédex -
-                        Squirtle</a>
+                    <a href="https://www.pokemon.com/br/pokedex/squirtle" target="_blank">Pokédex - Squirtle</a>
                 </li>
                 <li>
                     <a href="https://bulbapedia.bulbagarden.net/wiki/Squirtle_(Pok%C3%A9mon)" target="_blank">Bulbapedia
@@ -286,27 +107,24 @@
 
         <section id="evolucao" aria-labelledby="evolucao-label">
             <h2 id="evolucao-label">Evoluções</h2>
-            <ul id="ul-evolucao">
+            <ul>
                 <li>
                     <figure>
-                        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/007.png" height=215px
-                            alt="Squirtle" />
+                        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/007.png" alt="Squirtle" />
                         <figcaption>1. Squirtle</figcaption>
                     </figure>
                 </li>
 
                 <li>
                     <figure>
-                        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/008.png" height=215px
-                            alt="Wartortle" />
+                        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/008.png" alt="Wartortle" />
                         <figcaption>2. Wartortle</figcaption>
                     </figure>
                 </li>
 
                 <li>
                     <figure>
-                        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/009.png" height=215px
-                            alt="Blastoise" />
+                        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/009.png" alt="Blastoise" />
                         <figcaption>3. Blastoise</figcaption>
                     </figure>
                 </li>
