--- a/atv2.html
+++ b/atv2.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Página do Pokémon Squirtle</title>
+    <title>Página do Pokémons Squirtle</title>
     <style>
         /* Reset de estilos para garantir consistência em diferentes navegadores */
         body,
