--- a/index.html
+++ b/index.html
@@ -1,145 +1,332 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <title>Página do Pokémon Squirtle</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        /* Reset de estilos para garantir consistência em diferentes navegadores */
+body,
+h1,
+h2,
+p,
+ul,
+ol,
+li,
+figure,
+table,
+th,
+td {
+  margin: 0;
+  padding: 0;
+}
 
+* {
+  box-sizing: border-box;
+}
+
+/* Estilos gerais */
+
+body {
+  font-family: 'Arial', sans-serif;
+  color: #333;
+  background-color: #f4f4f4;
+}
+
+main {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  margin: 0 20px;
+}
+
+@media (max-width: 768px) {
+  main {
+    grid-template-columns: 1fr;
+  }
+}
+
+main > section {
+  padding: 20px;
+}
+
+main section,
+main article {
+  color: black;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+section h1,
+section h2,
+section h3 {
+  margin-bottom: 8px;
+}
+
+article h1,
+article h2,
+article h3 {
+  margin-bottom: 10px;
+}
+
+p {
+  margin-bottom: 16px;
+}
+
+ul li {
+  list-style-position: inside;
+}
+
+/* Header */
+
+header {
+  background-color: #007bff;
+  color: #fff;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+header h1 {
+  font-size: 24px;
+}
+
+@media (max-width: 768px) {
+  header h1 {
+    font-size: 20px;
+  }
+
+  h2 {
+    font-size: 18px;
+  }
+}
+
+/* Lista de navegação */
+
+nav ul {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  flex-wrap: wrap;
+  background-color: #343a40;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+@media (max-width: 768px) {
+  nav ul {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+nav a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  transition: color 0.3s ease-in-out;
+}
+
+nav a:hover {
+  color: #ffc107;
+}
+
+/* Seções */
+
+#info-squirtle img {
+  width: 150px;
+  height: 150px;
+  align-self: center;
+}
+
+#info-squirtle div {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+#info-squirtle img,
+#evolucao img {
+  transition: transform 0.3s ease-in-out;
+}
+
+#info-squirtle img:hover,
+#evolucao img:hover {
+  transform: scale(1.1);
+}
+
+#info-squirtle img:nth-of-type(2) {
+  padding: 35px;
+}
+
+#curiosidades li::marker {
+  content: '🔍';
+}
+
+#curiosidades ul {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+#evolucao ul {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  list-style: none;
+}
+
+@media (max-width: 768px) {
+  #evolucao ul {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+#evolucao img {
+  height: 150px;
+  width: 150px;
+}
+
+#evolucao figcaption {
+  font-weight: 600;
+  font-size: 20px;
+  text-align: center;
+  margin-top: 16px;
+}
+
+@media (max-width: 768px) {
+  #evolucao figcaption {
+    font-size: 16px;
+  }
+}
+
+article {
+  background-color: #ffc107;
+  color: #fff;
+}
+
+/* Links */
+
+a[target='_blank'] {
+  color: #4592c4;
+  font-weight: bold;
+  transition: opacity 0.3s ease-in-out;
+}
+
+a[target='_blank']:hover {
+  opacity: 0.8;
+}
+
+/* Footer */
+
+footer {
+  background-color: #343a40;
+  color: #fff;
+  padding: 20px;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+
+footer p {
+  margin-bottom: 0;
+}
+
+footer a {
+  text-decoration: none;
+  transition: opacity 0.3s ease-in-out;
+}
+
+footer a[href*='#'] {
+  color: white;
+}
+
+footer a[href*='mailto'] {
+  color: orangered;
+}
+
+footer a[href*='tel'] {
+  color: limegreen;
+}
+
+footer a[href]:hover {
+  opacity: 0.8;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+main > section,
+main > article {
+  animation: fadeIn 0.5s ease-in-out forwards;
+}</style>
 </head>
-
 <body>
+    
     <header id="header">
         <h1>Squirtle</h1>
-    </header>
-
-    <nav aria-label="Navegação principal">
-        <ul>
-            <li><a href="#info-squirtle">Informações sobre Squirtle</a></li>
-            <li><a href="#caracteristicas">Características</a></li>
-            <li><a href="#curiosidades">Curiosidades</a></li>
-            <li><a href="#artigo-squirtle">Artigo sobre Squirtle</a></li>
-            <li><a href="#recursos">Recursos Adicionais</a></li>
-            <li><a href="#evolucao">Evolução</a></li>
-        </ul>
-    </nav>
-
-    <main>
-        <section id="info-squirtle" aria-labelledby="info-squirtle-label">
-            <h2 id="info-squirtle-label">Informações sobre Squirtle</h2>
-
-            <ul id="img-info-adicionada-div">
-
-                <li><img class="img-info-inicio"
-                        src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/7.png"
-                        alt="Squirtle - Pokémon do tipo Água" /></li>
-                <li> <img class="img-info-inicio"
-                        src="https://i.pinimg.com/736x/fe/5d/10/fe5d1079c8f3de6755473806d3a45d57.jpg"
-                        alt="Squirtle - Pokémon do tipo Água" /></li>
-            </ul>
-
-            <p>
-                Squirtle é um Pokémon do tipo Água. É o Pokémon inicial da região de
-                Kanto e evolui para Wartortle.
-            </p>
-        </section>
-
-        <section id="caracteristicas" aria-labelledby="caracteristicas-label">
-            <h2 id="caracteristicas-label">Características</h2>
-            <p>
-                Squirtle é conhecido por sua concha nas costas, que oferece proteção
-                adicional. Ele possui ataques de água poderosos, como Water Gun e
-                Hydro Pump.
-            </p>
-        </section>
-
-        <section id="curiosidades" aria-labelledby="curiosidades-label">
-            <h2 id="curiosidades-label">Curiosidades</h2>
-            <ul>
-                <li>Squirtle é um dos Pokémon mais populares e adoráveis.</li>
-                <li>
-                    Seu nome deriva das palavras "squirrel" (esquilo) e "turtle"
-                    (tartaruga).
-                </li>
-                <li>
-                    Squirtle é frequentemente escolhido por treinadores para começar sua
-                    jornada Pokémon.
-                </li>
-            </ul>
-        </section>
-
-        <article id="artigo-squirtle" aria-labelledby="artigo-squirtle-label">
-            <h2 id="artigo-squirtle-label">Squirtle: O Amigo Aquático</h2>
-            <p>
-                Squirtle, com sua aparência simpática e sua habilidade em controlar a
-                água, conquistou o coração de treinadores Pokémon ao redor do mundo.
-                Sendo o inicial de água na região de Kanto, Squirtle é uma escolha
-                popular para aqueles que buscam equilíbrio e versatilidade em suas
-                equipes.
-            </p>
-            <p>
-                Sua concha nas costas não apenas oferece proteção, mas também é um
-                símbolo de resistência. Ao evoluir para Wartortle e, posteriormente,
-                para Blastoise, Squirtle se transforma em uma força formidável,
-                dominando ataques aquáticos que podem surpreender adversários em
-                batalhas.
-            </p>
-            <p>
-                Além de suas habilidades de batalha, Squirtle é conhecido por seu
-                carisma. Treinadores muitas vezes descrevem a relação com seu Squirtle
-                como uma amizade profunda, tornando-o não apenas um companheiro de
-                lutas, mas um amigo leal ao longo de suas jornadas.
-            </p>
-        </article>
-
-        <section id="recursos" aria-labelledby="recursos-label">
-            <h2 id="recursos-label">Recursos Adicionais</h2>
-            <ul>
-                <li>
-                    <a href="https://www.pokemon.com/br/pokedex/squirtle" target="_blank">Pokédex - Squirtle</a>
-                </li>
-                <li>
-                    <a href="https://bulbapedia.bulbagarden.net/wiki/Squirtle_(Pok%C3%A9mon)" target="_blank">Bulbapedia
-                        - Squirtle</a>
-                </li>
-            </ul>
-        </section>
-
-        <section id="evolucao" aria-labelledby="evolucao-label">
-            <h2 id="evolucao-label">Evoluções</h2>
-            <ul>
-                <li>
-                    <figure>
-                        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/007.png" alt="Squirtle" />
-                        <figcaption>1. Squirtle</figcaption>
-                    </figure>
-                </li>
-
-                <li>
-                    <figure>
-                        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/008.png" alt="Wartortle" />
-                        <figcaption>2. Wartortle</figcaption>
-                    </figure>
-                </li>
-
-                <li>
-                    <figure>
-                        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/009.png" alt="Blastoise" />
-                        <figcaption>3. Blastoise</figcaption>
-                    </figure>
-                </li>
-            </ul>
-        </section>
-    </main>
+      </header>
+<main>
+    <H1 id="title">    </H1>
+    <img id="img-poke" src="" alt="">
+</main>
 
     <footer aria-label="Rodapé">
         <p aria-label="Copyright">
-            &copy; 2024 Página do Pokémon Squirtle. Todos os direitos reservados.
+          &copy; 2024 Página do Pokémon Squirtle. Todos os direitos reservados.
         </p>
         <p><a href="#header">Voltar para o topo</a></p>
         <p><a href="mailto:contato@squirtlepage.com">Contato via e-mail</a></p>
         <p><a href="tel:+5555555555">Telefone: (55) 5555-5555</a></p>
-    </footer>
+      </footer>
 </body>
+<script>
+   console.log(location.search)
+ 
+   const urlParams = new URLSearchParams(location.search)
+   const name = urlParams.get('evolucao')
+   console.log(name)
 
+   var title = document.getElementById('title')
+
+   title.textContent = name;
+   
+   fetch(`https://pokeapi.co/api/v2/pokemon/${name}`)
+    .then(response => response.json())
+    .then(data => {
+        const spriteUrl = data.sprites.front_default;
+        const urlImg = document.getElementById("img-poke");
+        urlImg.src = spriteUrl;
+    })
+    .catch(error => {
+        console.error('Erro ao carregar os dados do Pokemon:', error);
+    })
+  .then(function (response) {
+    console.log(response.body);
+    return response;
+  })
+  .then(function(response) {
+    console.log(response);
+  });
+
+
+
+</script>
 </html>
