adicionando botão restante

--- a/2bimestre/atvidade-23-05/pages/todo/index.html
+++ b/2bimestre/atvidade-23-05/pages/todo/index.html
@@ -20,6 +20,7 @@
         <label for="modalDescription">Descrição:</label>
         <input type="text" id="modalDescription" name="modalDescription" required>
         <button type="submit">Salvar</button>
+        <button type="submit">Editar</button>
       </form>
     </div>
   </div>
